Fixing weird spacing issues on addresses.

--- a/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
+++ b/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
@@ -324,8 +324,12 @@ table.fc-header {
     display: inline;
   }
   .field-name-field-address {
-    div {
+    & > div {
       padding-right: 10px;
+
+      &:after {
+        display: none;
+      }
     }
   }
 }
